--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# media files
+video/
+audio/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -127,6 +131,9 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+
+# vscode project settings
+.vscode
 
 # Spyder project settings
 .spyderproject
